Data/CSS/main.css
/* ... */
.projectScope[hidden] {
  display: none;
}

.project[reverse] .projectScope {
  left: auto;  
  right: -12px;  

  transform: rotate(10deg);
}

html:not([mobile]) .projectMedia:hover .projectScope {
  opacity: 0;
  transition-delay: var(--projectHoverDelay);
}

.projectMedia[video] .projectScope {
  opacity: 0;
  transition-delay: 0s;
}

/* Projects -> Media -> Video button */
.projectVideoButton {
  width: 100%;

  display: flex;
  align-items: center;
  justify-content: center;

  position: absolute; 
  z-index: 2; 
  bottom: 10px;

  pointer-events: none;
}

html[mobile] .projectVideoButton {
  bottom: -5px;
}

.projectVideoButton[hidden] {
  display: none;
}

.projectVideoButton > span {
  padding: 10px 15px;

  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  
  border-radius: 30px; 
  background-color: var(--button);
  /*box-shadow: var(--shadowSmall);*/
  
  pointer-events: all;
  cursor: pointer;

  transition: transform .3s;
}

.projectMedia[video] > .projectVideoButton > span {
  transform: translateY(40px);
}

.projectVideoButton > span > img {
  width: 12px;
  height: 12px;
}

/* Projects -> Media -> Dummy */
.projectMediaDummy {
  width: calc(100% - 40px); 
  margin: 20px; 
  aspect-ratio: 16/9;
}

/* Projects -> Media -> Content */
.projectMediaContent {
  width: calc(100% - 40px); 
  
  position: absolute;
  top: auto;
  bottom: auto;
  left: 20px;
  right: 20px;

  aspect-ratio: 16/9;
  border-radius: 10px;

  overflow: hidden;
  background-color: var(--button);

  transition: width .2s, left .2s, right .2s, border-radius .2s;
}

html:not([mobile]) .projectMedia:hover > .projectMediaContent {
  width: 100%; 
  left: 0;
  right: 0;
  border-radius: 20px;
  transition-delay: var(--projectHoverDelay);
}

.projectMedia[video] > .projectMediaContent {
  width: 100%; 
  left: 0;
  right: 0;
  border-radius: 20px;
  transition-delay: 0s;
}

/* Projects -> Media -> Content -> Image/Video*/
.projectMediaContent > img {
  width: 100%; 
  height: 100%;
  object-fit: cover;
}

.projectMediaContent > iframe {
  width: 100%; 
  height: 100%;
  margin: 0;
  padding: 0;

  position: absolute;
  top: 0;
  left: 0;

  border: none;
  display: none;
}

.projectMedia[video] > .projectMediaContent > iframe {
  display: flex;
}

/* Projects -> Info */
.projectInfo {
  width: 50%; 
  --prMargin: -10%;
  margin-left: var(--prMargin); 
  display: flex;
  flex-direction: column;
  gap: 20px; 
  align-items: flex-end;
  text-align: end; 
  z-index: 2;
  pointer-events: none;
  transition: opacity .2s, z-index 0s;
}

html:not([mobile]) .project[reverse] > .projectInfo {
  margin-left: 0; 
  margin-right: var(--prMargin); 
  align-items: flex-start;
  text-align: start; 
}

html[mobile] .projectInfo {
  width: 100%; 
  --prMargin: 0;
  margin-top: 20px; 
}

html:not([mobile]) .projectMedia:hover + .projectInfo {
  opacity: .6;
  z-index: -1;
  transition-delay: var(--projectHoverDelay);
}

html:not([mobile]) .projectMedia[video] + .projectInfo {
  opacity: .6;
  z-index: -1;
  transition-delay: 0s;
}

/* Projects -> Info -> Tags */
.projectTags {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: end;
  gap: 10px;
}

.project[reverse] .projectTags {
  justify-content: start;
}

html[mobile] .projectTags {
  justify-content: center;
  width: 100%;
}

/* Projects (description -> content) */
.projectInfoContent {
  width: 100%; 
  padding: 20px; 
  box-sizing: border-box; 
  display: flex; 
  flex-direction: column; 
  gap: 20px; 
  background: var(--button); 
  border-radius: 20px;
  pointer-events: auto;
}

.projectInfoContent > span:nth-child(1) {
  width: 100%; 
  font-family: phonk; 
  font-size: 1.46rem; 
}

.projectInfoContent > span:nth-child(2) {
  width: 100%; 
  text-align: justify; 
  opacity: .8;
}

/* Projects (description -> buttons) */
.projectButtons {
  display: flex;
  flex-direction: row;
  gap: 20px;
  pointer-events: auto;
}

/* Project tags */
.projectTag {
  width: max-content;
  height: fit-content;
  padding: 8px 12px;

  font-family: roboto;
  font-size: .86rem;
  font-weight: 500;

  color: var(--text);
  background-color: var(--button);
  border-radius: 50px;
  box-sizing: border-box;
  border: solid 2px transparent;

  pointer-events: auto;
  cursor: pointer;

  transition: background-color .1s, border .1s;
}

.projectTag:hover {
  background-color: color-mix(in srgb, var(--button) 80%, var(--accent));
  border: solid 2px var(--accent);
}

/* Project buttons */
.projectButton {
  min-height: 40px;
  width: fit-content;
  padding: 0 12px;

  display: flex;
  align-items: center;
  justify-content: center;

  font-family: roboto;
  font-size: .93rem;
  white-space: nowrap;
  color: var(--text);

  box-sizing: border-box;
  border: solid 2px var(--accent);
  border-radius: 10px;

  cursor: pointer;
  transition: background .1s;
}

.projectButton:hover {
  background: var(--accentT);
}

/* Projects show more */
.projectsMoreBox {
  margin-top: 50px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 30px;
}





 /*$$$$$$   /$$$$$$  /$$$$$$$$ /$$$$$$$$ /$$$$$$  /$$      /$$
| $$__  $$ /$$__  $$|__  $$__/|__  $$__//$$__  $$| $$$    /$$$
| $$  \ $$| $$  \ $$   | $$      | $$  | $$  \ $$| $$$$  /$$$$
| $$$$$$$ | $$  | $$   | $$      | $$  | $$  | $$| $$ $$/$$ $$
| $$__  $$| $$  | $$   | $$      | $$  | $$  | $$| $$  $$$| $$
| $$  \ $$| $$  | $$   | $$      | $$  | $$  | $$| $$\  $ | $$
| $$$$$$$/|  $$$$$$/   | $$      | $$  |  $$$$$$/| $$ \/  | $$
|_______/  \______/    |__/      |__/   \______/ |__/     |_*/

/* Bottom container */
.bot {
  width: calc(100% - 40px); 
  margin-top: 5vh; 
  padding: 20px; 

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 10px; 

  font-size: 1vw;
}

html[mobile] .bot {
  margin-top: unset; 
  font-size: 3vw; 
}
/* ... */

